changes to meta tags for facebook posting

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,8 @@
 <% open_graph_meta_tags({ "og:title" => "#{SITE_NAME}",
-    "og:type" => "movie",
+    "og:type" => "article",
     "og:url" => "#{@youtube_video.url if @youtube_video}",
     "og:site_name" => "#{SITE_NAME}",
-    "og:description" => " #{@post.title} <br/> #{@post.summary} ",
+    "og:description" => " #{@post.title} <p> #{@post.summary}</p> ",
     "og:image" => " #{@youtube_video.thumbnail_small if @youtube_video}",
     "og:video:type" => "application/x-shockwave-flash",
     "og:video:height" => "398",
