fixes image should not show as video image

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,14 +1,24 @@
+<% meta_tags({ "description" => " #{@post.title} : #{@post.summary} "
+  }) -%>
+<% if @youtube_video %>
 <% open_graph_meta_tags({ "og:title" => "#{SITE_NAME}",
-    "og:type" => "article",
+    "og:type" => "movie",
     "og:url" => "#{@youtube_video.url if @youtube_video}",
     "og:site_name" => "#{SITE_NAME}",
-    "og:description" => " #{@post.title} <p> #{@post.summary}</p> ",
-    "og:image" => " #{@youtube_video.thumbnail_small if @youtube_video}",
+    "og:description" => "#{@post.title}: #{@post.summary}",
+    "og:image" => "#{@youtube_video.thumbnail_large if @youtube_video}",
     "og:video:type" => "application/x-shockwave-flash",
     "og:video:height" => "398",
     "og:video:width" => "224",
     "og:video" => "http://www.youtube.com/v/#{@youtube_video.video_id if @youtube_video}"
   }) -%>
+<%else%>
+<% open_graph_meta_tags({ "og:title" => "#{SITE_NAME}",
+    "og:type" => "album",
+    "og:site_name" => "#{SITE_NAME}",
+    "og:description" => "#{@post.title}: #{@post.summary}"
+  }) -%>
+<%end%>
 
 <div class="content new_level with_submenu clearfix">
   <div class="content_actions">
