Closes #42, closes #52, closes #53

--- a/app/views/layouts/_left_sidebar.html.erb
+++ b/app/views/layouts/_left_sidebar.html.erb
@@ -1,7 +1,7 @@
 <div class="top_submenu clearfix">
   <ul>
     <li class="conference_column_first">Division:</li>
-    <% [ 'I-A', 'I-AA' ].each do |div| %>
+    <% Division.all.each do |div| %>
         <li<%= ' class="active"'.html_safe if session[:division] == div %>><%= link_to_if(session[:division] != div, div, change_div_path(div)) %></li>
     <% end %>
   </ul>
