--- a/app/views/welcome/_sotw.html.erb
+++ b/app/views/welcome/_sotw.html.erb
@@ -1,9 +1,9 @@
 <div class="content standard clearfix">
   <div class="content_title"><h1>Smacks of the Week</h1></div>
   <div class="content_subtitle">
+    <%= link_to "All posts", posts_path, :class => "view_more" %>
     <%= render :partial => 'shared/search' %>
   </div>
-
   <div class="content_container clearfix">
     <div class="new_line"></div>
     <div class="section">
@@ -29,12 +29,8 @@
        <%= censoring(@sotw.summary) %>
       </div>
       <div class="content_share">
-        <%= share_icons(@sotw, :post) %>
-        <div class="voting_icons"><%= voting_icons(@sotw) %></div>
+        <%= share_and_voting_icons(@sotw, :post) %>
       </div>
     </div>
-  </div>
-  <div class="view_more_link clear_both">
-    <%= link_to "All posts", posts_path %>
   </div>
 </div>
