--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,7 @@
     <div id="stats_container" class="table_middle">
       <%# FIXME widget shows stats only for I-A now %>
       <%# Conference.where(:division => session[:division]).each do |conference| %>
-      <% Conference.where(:division => 'I-A').order('name asc').each do |conference| %>
+      <% Conference.where(:division => Division.default).order('name asc').each do |conference| %>
         <%= render :partial => 'conferences/stats_widget', :locals => {:conference => conference, :limit => 3} %>
       <% end %>
     </div>
@@ -12,5 +12,5 @@
 <% end %>
 
 <% if @sotw %>
-  <%= render :partial => 'sotw' %>
+  <%= render 'sotw' %>
 <% end %>
