--- a/app/views/welcome/_sotw.html.erb
+++ b/app/views/welcome/_sotw.html.erb
@@ -8,7 +8,7 @@
     <div class="new_line"></div>
     <div class="section">
       <div class="section_title">
-        <%= link_to censoring(@sotw.title), [@sotw.postable, @sotw] %>
+        <%= link_to censoring(truncate(@sotw.title, :length => 22)), [@sotw.postable, @sotw] %>
       </div>
       <div class="section_undertitle">
         COLLEGE SMACKED: <%= link_to @sotw.postable.name.upcase, @sotw.postable, :class => :section_link %>
