--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,7 @@
       });
   </script>
   <%= csrf_meta_tag %>
+  <%= render :partial => 'layouts/google_analytics' if Rails.env == 'production' %>
 </head>
 <body<%= " body='#{@body_id}'" if @body_id %>>
 <div id="super_wrapper">
@@ -80,8 +81,6 @@
 <div class="footer ">
   <div class="footer_content">
     <span class="copyright">&copy; <%= Date.today.year %> Campusmack <a href="/terms">Terms</a> | <a href="/privacy">Privacy</a></span>
-    <!-- <img src="/images/tw_ducks.png" class="ducks" alt=""/>
-    <a href="#" class="footer_link">Follow us on Twitter</a> -->
   </div>
 </div>
 </body>
