--- a/app/views/posts/_small_preview.html.erb
+++ b/app/views/posts/_small_preview.html.erb
@@ -1,7 +1,7 @@
 <li class="team-item">
   <div class="item-top clearfix">
     <h3><%= link_to truncate(post.title, :length => 24), post, :title => post.title %></h3>
-    <div class="which-college"><span>by:</span> <%= link_to(post.user.try(:username), post.user, :class => :author) %></div>
+    <div class="which-college"><span>by:</span> <%= link_to(truncate(post.user.try(:username), :length => 20), post.user, :class => :author) %></div>
     <div class="votes">
       <%= voting_icons(post, :preview) %>
     </div>
