--- a/app/views/welcome/_sotw.html.erb
+++ b/app/views/welcome/_sotw.html.erb
@@ -1,42 +1,26 @@
-<div class="content standard clearfix">
-  <div class="content_actions">
-    <ul>
-      <li class="dark_button"><%= link_to "Add Smack", "#{new_post_path}?type=Smack", :remote => true %></li>
-      <li class="dark_button"><%= link_to 'Add Redemption', "#{new_post_path}?type=Redemption", :remote => true %></li>
-    </ul>
+<div class="section">
+  <div class="section_title">
+    <%= link_to censoring(truncate(sotw.title, :length => 22)), [sotw.postable, sotw] %>
   </div>
-  <div class="content_title"><h1>Smacks of the Week</h1></div>
-  <div class="content_subtitle">
-    <%= link_to "All posts", posts_path, :class => "view_more" %>
-    <%= render :partial => 'shared/search' %>
+  <div class="section_undertitle">
+    COLLEGE SMACKED: <%= link_to sotw.postable.name.upcase, sotw.postable, :class => :section_link %>
   </div>
-  <div class="content_container clearfix">
-    <div class="new_line"></div>
-    <div class="section">
-      <div class="section_title">
-        <%= link_to censoring(truncate(@sotw.title, :length => 22)), [@sotw.postable, @sotw] %>
-      </div>
-      <div class="section_undertitle">
-        COLLEGE SMACKED: <%= link_to @sotw.postable.name.upcase, @sotw.postable, :class => :section_link %>
-      </div>
-      <div class="img_section">
-        <% if @sotw.photo %>
-            <img src="<%= @sotw.photo.url(:medium) %>" alt="" class="img"/>
-        <% end %>
-        <% if @sotw.video %>
-            <%= youtube_embed(@sotw.video.url, :medium) %>
-        <% end %>
-        <%= link_to "Article Preview", @sotw.news_post.url, :class => 'snap_shots' unless @sotw.news_post.blank? %>
-      </div>
-      <div class="img_title">
-        <%= @sotw.created_at.to_date.to_s(:long) %> by <%= link_to(@sotw.user.try(:username), @sotw.user) %>
-      </div>
-      <div class="content_text">
-       <%= censoring(@sotw.summary) %>
-      </div>
-      <div class="content_share">
-        <%= share_and_voting_icons(@sotw, :post) %>
-      </div>
-    </div>
+  <div class="img_section">
+    <% if sotw.photo %>
+      <a class="photo" href="<%= sotw.photo_url(:large) %>"><%= image_tag sotw.photo_url(:medium) %></a>
+    <% end %>
+    <% if sotw.video %>
+      <%= youtube_thumbnail(sotw.youtube_thumbnail_url, [sotw.postable, sotw], nil) %>
+    <% end %>
+    <%= link_to "Article Preview", sotw.news_post.url, :class => 'snap_shots' unless sotw.news_post.blank? %>
+  </div>
+  <div class="img_title">
+    <%= sotw.created_at.to_date.to_s(:long) %> by <%= link_to(sotw.user.try(:username), sotw.user) %>
+  </div>
+  <div class="content_text">
+    <%= censoring(sotw.summary) %>
+  </div>
+  <div class="content_share">
+    <%= share_and_voting_icons(sotw, :post) %>
   </div>
 </div>
