--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <% content_for :jq do %>
   $("#add_post_select").live("change",function(){
-    apsl = $("#add_post_select_link");
-    apsl.attr("href", apsl.data("before") + $(this).val() + apsl.data("after"));
+  apsl = $("#add_post_select_link");
+  apsl.attr("href", apsl.data("before") + $(this).val() + apsl.data("after"));
   });
 <% end %>
 <% content_for :above do %>
@@ -9,12 +9,25 @@
   <div id="stats_widget" class="table new_level clearfix">
     <div id="stats_container" class="table_middle">
       <% Conference.where(:division => Division.default).order('name asc').each do |conference| %>
-        <%= render :partial => 'conferences/stats_widget', :locals => {:conference => conference, :limit => 3} %>
+        <%= render :partial => 'conferences/stats_widget', :locals => { :conference => conference, :limit => 3 } %>
       <% end %>
     </div>
   </div>
 <% end %>
-
-<% if @sotw %>
-  <%= render 'sotw' %>
-<% end %>
+<div class="content standard clearfix">
+  <div class="content_actions">
+    <ul>
+      <li class="dark_button"><%= link_to "Add Smack", "#{new_post_path}?type=Smack", :remote => true %></li>
+      <li class="dark_button"><%= link_to 'Add Redemption', "#{new_post_path}?type=Redemption", :remote => true %></li>
+    </ul>
+  </div>
+  <div class="content_title"><h1>Smacks of the Week</h1></div>
+  <div class="content_subtitle">
+    <%= link_to "All posts", posts_path, :class => "view_more" %>
+    <%= render :partial => 'shared/search' %>
+  </div>
+  <div class="content_container clearfix">
+    <div class="new_line"></div>
+    <%= render :partial => 'sotw', :collection => Post.smacks_of_week %>
+  </div>
+</div>
