Fixed two syntax error

--- a/app/views/user_mailer/share_post.html.erb
+++ b/app/views/user_mailer/share_post.html.erb
@@ -73,7 +73,7 @@
                       <p style="font-family: Arial, sans-serif; font-size: 12px; line-height: 18px; margin: 0 0 20px">Are
                         you going to take that?</p>
 
-                      <p><%= link_to "Smack " + @smacker.first_name + " Back!", college_smacks_url(@smacker.college), :style => "font-family: Arial, sans-serif; color: #028cf0; font-size: 12px; font-weight: bold;" %></a></p>
+                      <p><%= link_to "Smack " + @smacker.first_name + " Back!", college_smacks_url(@smacker.college), :style => "font-family: Arial, sans-serif; color: #028cf0; font-size: 12px; font-weight: bold;" %></p>
                     </td>
                   </tr>
                 </table>
