--- a/app/views/posts/_select_add.html.erb
+++ b/app/views/posts/_select_add.html.erb
@@ -1,5 +1,5 @@
 <h2>Select Campus to add <%= @type %> to</h2><br/>
-<%= select("add_post", 'select', option_groups_from_collection_for_select(@conferences, :colleges, :name, :permalink, :name)) %>
+<%= select("add_post", 'select', option_groups_from_collection_for_select(@conference_collection, :colleges, :name, :permalink, :name)) %>
 <br/><br/>
 <div class="blue_button">
   <%= link_to "Add #{@type}", "/colleges/#{@college.permalink}/#{@type.downcase}s/new", :id => "add_post_select_link", "data-before" => "/colleges/", "data-after" => "/#{@type.downcase}s/new" %>
