--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -21,7 +21,7 @@
       <li class="dark_button"><%= link_to 'Add Redemption', "#{new_post_path}?type=Redemption", :remote => true %></li>
     </ul>
   </div>
-  <div class="content_title"><h1>Smacks of the Week</h1></div>
+  <div class="content_title sotw"><h1>Smacks of the Week</h1></div>
   <div class="content_stats">
     <ul class="inner_menu">
       <li>
