--- a/app/views/welcome/_sotw.html.erb
+++ b/app/views/welcome/_sotw.html.erb
@@ -5,7 +5,7 @@
   <div class="section_undertitle">
     COLLEGE SMACKED: <%= link_to sotw.postable.name.upcase, sotw.postable, :class => :section_link %>
   </div>
-  <div class="img_section">
+  <div class="img_section photo_box">
     <% if sotw.photo %>
       <a class="photo" href="<%= sotw.photo_url(:large) %>"><%= image_tag sotw.photo_url(:medium) %></a>
     <% end %>
