--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -21,7 +21,7 @@
           postcontent[1] = '<%= f.fields_for :photo, Photo.new do |pf| %>
             <tr>
               <td class="description"><%= pf.label :image, 'Photo:' %></td>
-              <td class="entry"><%= pf.file_field :image %></td>
+              <td class="entry"><%= pf.file_field :image, :validate => false %></td>
             </tr>
           <% end.gsub(/\r|\n/, '').html_safe %>
           ';
@@ -54,6 +54,8 @@
           }
       <% end %>
       <% content_for :jq do %>
+
+          $(".inner_menu li a").click(function(){ $('.inner_menu li a').removeClass('active'); $(this).addClass('active'); $('form[data-validate]').validate(); });
           $("#switch_video").click(function(){switch_fields(0); return false;});
           $("#switch_photo").click(function(){switch_fields(1); return false;});
           $("#switch_news").click(function(){switch_fields(2); return false;});
@@ -67,13 +69,13 @@
               <td class="entry">
                 <ul class="inner_menu">
                   <li>
-                    <span id="switch_video">Video</span>
+                    <a id="switch_video" href="#" class="active">Video</a>
                   </li>
                   <li>
-                    <span id="switch_photo" class="normal">Photo</span>
+                    <a id="switch_photo" href="#">Photo</a>
                   </li>
                   <li>
-                    <span id="switch_news" class="normal">News</span>
+                    <a id="switch_news" href="#">News</a>
                   </li>
                 </ul>
               </td>
