--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -17,8 +17,8 @@
 <div class="content standard clearfix">
   <div class="content_actions">
     <ul>
-      <li class="dark_button"><%= link_to "Add Smack", "#{new_post_path}?type=Smack", :remote => true %></li>
-      <li class="dark_button"><%= link_to 'Add Redemption', "#{new_post_path}?type=Redemption", :remote => true %></li>
+      <li class="dark_button"><%= link_to "Add Smack", new_smack_path, :remote => true %></li>
+      <li class="dark_button"><%= link_to 'Add Redemption', new_redemption_path, :remote => true %></li>
     </ul>
   </div>
   <div class="content_title sotw"><h1>Smacks of the Week</h1></div>
