--- a/app/views/posts/home_new.js.erb
+++ b/app/views/posts/home_new.js.erb
@@ -1,1 +1,1 @@
-jQuery.facebox("<%= escape_javascript(render 'posts/select_add.html') %>");
+campus_select = "<%= escape_javascript(render 'posts/select_add.html') %>"
