--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,14 @@
   <%= render :partial => 'layouts/google_analytics' if Rails.env == 'production' %>
 </head>
 <body<%= " body='#{@body_id}'" if @body_id %>>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) {return;}
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 <div id="super_wrapper">
   <div id="header">
     <div class="center_page ">
@@ -81,6 +89,7 @@
 <div class="footer ">
   <div class="footer_content">
     <span class="copyright">&copy; <%= Date.today.year %> Campusmack <a href="/terms">Terms</a> | <a href="/privacy">Privacy</a></span>
+    <div class="fb-like-box" data-href="http://www.facebook.com/Campusmack" data-width="180" data-colorscheme="dark" data-show-faces="false" data-stream="false" data-header="true"></div>
   </div>
 </div>
 </body>
