--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,7 @@
 <% content_for :js do %>
   var campus_select = null;
   var post_popup_to = null;
+  var college_preloading = false;
   var popup_html = "<div id=\"add_post_popup\"><h2></h2><div class=\"blue_button\"><a href=\"/\" data-after=\"/smacks/new\" data-before=\"/colleges/\" id=\"add_post_select_link\">Add</a></div></div>";
   function update_popup_link() {
     apsl = $("#add_post_select_link");
@@ -17,6 +18,11 @@
     if (campus_select != null) {
       show_post_popup(type)
     } else {
+      if (college_preloading != true) {
+        college_preloading = true;
+        $.ajax({url: "/smacks/new"});
+      }
+      jQuery.facebox.loading();
       clearTimeout(post_popup_to);
       post_popup_to = setTimeout("try_show_post_popup(\"" + type + "\")", 500);
     }
@@ -26,7 +32,10 @@
   $("#add_post_select").live("change",function(){
     update_popup_link();
   });
-  $.ajax({url: "/smacks/new"});
+  <% if current_user %>
+    college_preloading = true;
+    $.ajax({url: "/smacks/new"});
+  <% end %>
   $("#add_smack_btn").click(function(e){
     e.preventDefault();
     try_show_post_popup("smack");
